fix: moving scroll down message below lunch display as it will not be hidden on mobile

--- a/assets/css/site.scss
+++ b/assets/css/site.scss
@@ -311,22 +311,22 @@ html[lang="ja-simple"] {
 .lunch-detail--spacer {
   color: white;
   position: relative;
-  margin-top: -50px;
+  margin-top: -1.2em;
   width: 100%;
-  height: 50px;
+  height: 1em;
   text-align: center;
   span {
     &:before, &:after {
       content: '>';
       transform: rotate(90deg);
       display: inline-block;
-      padding: 0 20px;
+      padding: 0 1em;
     }
     position: relative;
     display: inline-block;
     padding: 0.75em;
     top: 0;
-    font-size: 20px;
+    font-size: 0.3em;
   }
 }
 .main--main-screen--desperate,
